[package]
name = "stochastic"
version = "0.3.4"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
license = "MIT"
repository = "https://github.com/stainless-steel/stochastic"
homepage = "https://github.com/stainless-steel/stochastic"
documentation = "https://stainless-steel.github.io/stochastic"
description = "The package provides means of simulating stochastic processes."

[dependencies]
czt = "0.2"
probability = "0.12"
random = "0.9"

[dev-dependencies]
assert = "0.6"
