[package]
name = "stochastic"
version = "0.5.0"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides means of simulating stochastic processes."
documentation = "https://stainless-steel.github.io/stochastic"
homepage = "https://github.com/stainless-steel/stochastic"
repository = "https://github.com/stainless-steel/stochastic"

[dependencies]
czt = "0.2"
probability = "0.14"

[dev-dependencies]
assert = "0.7"
